# StructGenie

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUITING.md  LICENCE  README.md  Test.md  pyproject.toml  requirements.txt
structgenie/: base.py  errors.py  utils.py
structgenie/driver/: __init__.py  chat_driver.py  langchain.py  langchain_driver.py  mistral_driver.py  openai.py  openai_driver.py  openai_vision.py  utils.py
structgenie/engine/: __init__.py  async_engine.py  async_engine_conditional.py  base.py  chain.py  conditional.py  genie.py  major_vote.py  single.py
structgenie/examples/: __init__.py  base.py  load.py  selector.py  shuffle_selector.py  simple_selector.py
structgenie/input_output/: __init__.py  _example_parser.py  _extract_notation.py  _legacy_type_notation.py  _pydantic_parser.py  _template.py  base.py  input_model.py  input_schema.py  line.py  load.py  output_attribute.py  output_model.py  output_schema.py
structgenie/operator/: __init__.py  default.py  default_loops.py
structgenie/parser/: __init__.py  inputs.py  placeholder.py  string.py  types.py
structgenie/prompt/: _templates.py  builder.py  builder_output_only.py  helper.py
structgenie/pydantic_v1/: __init__.py
structgenie/styles/: tags.py  utils.py
structgenie/templates/: __init__.py  extract.py  functions.py  load_config.py  load_default.py  load_functions.py
tests/: fixtures.py  test_drivers.py  test_engine.py  test_integration_run_error.py  test_operator.py  test_output_parsing.py  test_partial_parsing.py  test_template_exec.py  test_validator.py
(+58 files in other folders)
