[tool.poetry]
name = "structgenie"
version = "0.1.20"
description = "LLM Generation Framework for structured outputs with type validation"
license = "MIT"
authors = ["elokow <lukas.kowejsza@gmail.com>"]
readme = "README.md"
repository = "https://github.com/elokus/StructGenie"


[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
pydantic = ">=1,<3"
uuid = "^1.30"
colorama = "0.4.6"
tiktoken = ">=0.3.0,<1.0"
openai = ">=1.2.0"
jupyter = ">=1.0.0"
python-dotenv =">=1.0.0"
pyyaml = ">=5.3,<10.0"
pytest = ">=7.4.3"
tenacity = ">=8.2.3"


[tools.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.6.1"
pytest-env = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"